# solc-detect

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: multiple_pragmas.sol  no_pragma_1.sol  no_pragma_2.sol  rubixi.sol  test1.sol  test2.sol  test3.sol  test4.sol  test5.sol
solc_detect/: __init__.py  __main__.py  lib.py  parser.py  pragma_grammar.lark  pragma_parser.py  solc_detect.py
tests/: test.py
