[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solc_detect"
version = "0.0.1"
authors = [
  { name="Ta Quang Trung", email="taquangtrungvn@gmail.com" },
]
description = "A tool to detect Solidity compiler version required by smart contracts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sbip-sg/solc-detect"
"Bug Tracker" = "https://github.com/sbip-sg/solc-detect/issues"
