[project]
name = "solc_detect"
version = "0.0.4"
authors = [{name="Ta Quang Trung"},]
description = "A tool to detect Solidity compiler version required by smart contracts"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sbip-sg/solc-detect"
"Bug Tracker" = "https://github.com/sbip-sg/solc-detect/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Setuptools
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Code formatting
[tool.black]
line-length = 80
